--- a/sigjaw.css
+++ b/sigjaw.css
@@ -56,7 +56,7 @@ body {
 #tickets p {
 	text-decoration: none;
 	color: black;
-	margin-left: 41.6%;
+	margin-left: 44.5%;
 	font-weight: bold;
 	font-size: 175%;
 	white-space: nowrap;
@@ -154,12 +154,14 @@ body {
 	}
 
 	#photo1 {
-	width: 50%;
-	margin-left: 23%;
+	width: 60%;
+	margin-left: 19%;
 }
 
 	#tickets {
-		margin-left: -43%;
+		margin-left: -26%;
+		text-decoration: none;
+		color: black;
 	}
 
 	#navbar ul li {
